k8s/2prometheus/32-deployment-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: hobb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus-container
        image: registry.io.bb.com.br:3389/hobb/prometheus:0.0.2
        ports:
        - containerPort: 9090
          name: service
        volumeMounts:
          - name: data
            mountPath: /prometheus
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prometheus-pvc
