k8s/2prometheus/42-ingress-interno-prometheus.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hobb-api
  name: prometheus-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: prometheus.hobb.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 9090
  tls:
  - secretName: hobb-io-tls
    hosts:
    - prometheus.hobb.io.bb.com.br
